@@ -1,4 +1,5 @@
-<configure xmlns="http://namespaces.zope.org/zope">
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:zcml="http://namespaces.zope.org/zcml">
 
   <include package="zope.component" file="meta.zcml" />
   
@@ -13,6 +14,17 @@
   <adapter
      name="string"
      factory=".expressions.StringTranslation" />
+
+  <configure zcml:condition="installed zope.app.component">
+           
+      <include package="zope.app.component" file="meta.zcml" />
+      <include package="zope.app.security" file="meta.zcml" />
+      
+      <class class=".utils.repeatitem">
+        <allow interface=".interfaces.ITALESIterator" />
+      </class>
+    
+  </configure>
   
 </configure>
  
